--- a/src/views/Public/MainPage/Contact/Contact.module.scss
+++ b/src/views/Public/MainPage/Contact/Contact.module.scss
@@ -62,5 +62,10 @@
         justify-content: center;
       }
     }
+
+    .formWrapper {
+      margin-left: 0;
+      width: 100%;
+    }
   }
 }
